standards/gnds-2.0-alpha/alpha/c/src/v2.0/common/Shell.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Shell is the basic handle type in this file. Example:
//    // Create a default Shell object:
//    Shell handle = ShellDefault();
// Functions involving Shell are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_COMMON_SHELL
#define C_INTERFACE_ALPHA_V2_0_COMMON_SHELL

#include "GNDStk.h"
#include "v2.0/common/Uncertainty.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ShellClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Shell
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ShellClass *Shell;

// --- Const-aware handles.
typedef const struct ShellClass *const ConstHandle2ConstShell;
typedef       struct ShellClass *const ConstHandle2Shell;
typedef const struct ShellClass *      Handle2ConstShell;
typedef       struct ShellClass *      Handle2Shell;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstShell
ShellDefaultConst();

// +++ Create, default
extern_c Handle2Shell
ShellDefault();

// --- Create, general, const
extern_c Handle2ConstShell
ShellCreateConst(
   const char *const label,
   const double value,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Create, general
extern_c Handle2Shell
ShellCreate(
   const char *const label,
   const double value,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ShellAssign(ConstHandle2Shell This, ConstHandle2ConstShell from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ShellDelete(ConstHandle2ConstShell This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ShellRead(ConstHandle2Shell This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ShellWrite(ConstHandle2ConstShell This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ShellPrint(ConstHandle2ConstShell This);

// +++ Print to standard output, as XML
extern_c int
ShellPrintXML(ConstHandle2ConstShell This);

// +++ Print to standard output, as JSON
extern_c int
ShellPrintJSON(ConstHandle2ConstShell This);


// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ShellLabelHas(ConstHandle2ConstShell This);

// +++ Get
// +++ Returns by value
extern_c const char *
ShellLabelGet(ConstHandle2ConstShell This);

// +++ Set
extern_c void
ShellLabelSet(ConstHandle2Shell This, const char *const label);


// -----------------------------------------------------------------------------
// Metadatum: value
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ShellValueHas(ConstHandle2ConstShell This);

// +++ Get
// +++ Returns by value
extern_c double
ShellValueGet(ConstHandle2ConstShell This);

// +++ Set
extern_c void
ShellValueSet(ConstHandle2Shell This, const double value);


// -----------------------------------------------------------------------------
// Child: uncertainty
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ShellUncertaintyHas(ConstHandle2ConstShell This);

// --- Get, const
extern_c Handle2ConstUncertainty
ShellUncertaintyGetConst(ConstHandle2ConstShell This);

// +++ Get, non-const
extern_c Handle2Uncertainty
ShellUncertaintyGet(ConstHandle2Shell This);

// +++ Set
extern_c void
ShellUncertaintySet(ConstHandle2Shell This, ConstHandle2ConstUncertainty uncertainty);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/common/Shell/src/custom.h"

#undef extern_c
#endif